--- a/css/style.css
+++ b/css/style.css
@@ -289,12 +289,10 @@ hr, .hr-white{
 	
 }
 .square_image img{
-	flex:1;
-	width:200px;
+	max-width:50%;
 	padding-top: 16.66%;
 	padding-bottom:16.66%;
 	min-width: 100px;
-    max-width: 200px;
 	opacity: 0.5;
 }
 
@@ -456,7 +454,10 @@ hr, .hr-white{
 }	
 	 
 @media screen and (max-width:1024px){
-/*about, contact box*/
+/*index box, contact box*/
+#follow {
+	padding:80px 0px 80px 0px;
+}
 #name_info h1 {
 	     font-size:26px;
           }
@@ -495,17 +496,21 @@ hr, .hr-white{
 
 
 @media screen and (max-width:699px){
+
+#name_box span {
+	font-size:32px;
+	}
 #name_pic img {
 	width:60%;
 	border-radius:999rem;
 	margin-left:0%;
-	}
+}
 #name_pic p {
 	margin-left:0%;
-	}	
+}	
 #name_info {
 	margin-top:80px;
-	}	
+}	
 }
 @keyframes box {
     0% { opacity: 0; transform: translateY(-50px); }
@@ -656,12 +661,9 @@ hr, .hr-white{
 		 
 /*Social Media*/
 .square_image img{
-		flex:1;
-		width:120px;
-		padding-top: 16.66%;
-		padding-bottom: 16.66%;
-		min-width: 80px;
-		max-width: 120px;
+		max-width: 35%;
+		padding-top: 8%;
+		padding-bottom: 8%;
 	}
 /*Social Media*/	
 .projects_title{
@@ -711,12 +713,9 @@ hr, .hr-white{
 	font-size:36px;
 	}
 .square_image img{
-		flex:1;
-		width:150px;
-		padding-top: 10%;
-		padding-bottom: 10%;
-		min-width: 100px;
-		max-width: 150px;
+		max-width: 20%;
+		padding-top: 6%;
+		padding-bottom: 6%;
 	}
 /*Social Media*/	
 #name_box, #contact_box {
